--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   border: none;
   outline: none;
-  font-family: 'poppins' sans-serif;
+  font-family: 'poppins', sans-serif;
 }
 html{
   font-size: 62.5%;
